--- a/app/components/ApmtList/styles.css
+++ b/app/components/ApmtList/styles.css
@@ -1,5 +1,6 @@
 .col-1-of-7 {
   width: calc(100%/7);
+  min-width: 220px;
   position: relative;
   min-height: 1px;
   padding-right: .9375rem;
@@ -18,6 +19,17 @@
   composes: col-1-of-7;
   text-align: center;
   height: 80vh;
+}
+
+.colCentered {
+  float:none;
+  margin: 0 auto;
+}
+
+.listContainer{
+  display:flex;
+  flex-direction:row;
+  justify-content: center;
 }
 
 .noShowStats {
