--- a/app/containers/HomePage/styles.css
+++ b/app/containers/HomePage/styles.css
@@ -6,9 +6,17 @@
 
 }
 
+.heading{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+
 .title {
-  text-align: center;
-  margin-bottom: 2rem;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-bottom: 1rem;
 }
 
 .loading {
